--- a/client/src/Components/LoginWaiter/LoginWaiter.module.css
+++ b/client/src/Components/LoginWaiter/LoginWaiter.module.css
@@ -1,4 +1,4 @@
-.server {
+.waiter {
   max-width: 100vw;
   height: 90vh;
   display: flex;
@@ -13,13 +13,22 @@
   grid-template-rows: repeat(4, 1fr);
   gap: 5px;
   margin-bottom: 50px;
+  margin-top: 50px;
 }
+
 
 .zero {
    grid-column: 2/3;
+   width: 70px;
+   height: 70px;
 }
 
-.input_server {
-  margin-left: 35px;
-  align-self: center;
+.input_waiter {
+  margin-left: 38px;
 }
+
+.button_waiter {
+  width: 70px;
+  height: 70px;
+}
+
