--- a/client/src/Components/LoginWaiter/LoginWaiter.module.css
+++ b/client/src/Components/LoginWaiter/LoginWaiter.module.css
@@ -16,19 +16,40 @@
   margin-top: 50px;
 }
 
-
-.zero {
-   grid-column: 2/3;
-   width: 70px;
-   height: 70px;
+.digits :first-child {
+  grid-column: 2/3;
+  grid-row: 4/5;
 }
 
+
 .input_waiter {
-  margin-left: 38px;
+  margin-bottom: 35px;
+  text-align: center;
+  border: none;
+  letter-spacing: 5px;
+  align-self: center;
+  font-size: 36px;
 }
 
 .button_waiter {
   width: 70px;
   height: 70px;
 }
+
+.form {
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.form_buttons {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+}
+.button {
+    margin-right: 10px;
+  }
 
