--- a/client/src/Components/Home/Home.module.css
+++ b/client/src/Components/Home/Home.module.css
@@ -1,7 +1,7 @@
 .main {
   max-width: 100vw;
   height: 98vh;
-  background: url('../../../public/img/main.jpg') no-repeat;
+  background: url('../../../public/img/home1.png') no-repeat;
   background-size: cover;
   background-position: center;
 }
