--- a/client/src/Components/LoginWaiter/LoginWaiter.module.css
+++ b/client/src/Components/LoginWaiter/LoginWaiter.module.css
@@ -1,6 +1,18 @@
 .waiter {
-  max-width: 100vw;
-  height: 90vh;
+  /* max-width: 100vw; */
+  height: 98vh;
+  /* background: url('../../../public/img/waiter.jpg') no-repeat;
+  background-size: cover;
+  background-position: center; */
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(249, 250, 251, 0.982),
+      rgba(17, 24, 39, 0.782)
+    ),
+    url('../../../public/img/waiter.jpg');
+  background-size: cover;
+  background-position: top;
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -29,30 +41,16 @@
   letter-spacing: 5px;
   align-self: center;
   font-size: 36px;
+  background: none;
 }
 
 .button_waiter {
   width: 70px;
   height: 70px;
-  position:relative;
-  display:inline-block;
-  margin:5px;
+  background-color: rgba(0, 0, 0, 0.637);
 }
 
-.button_waiter:after {
-  content:"";
-  height:100%;
-  width:100%;
-  padding:4px;
-  position: absolute;
-  bottom:-15px;
-  left:-4px;
-  z-index:-1;
-  background-color:#2B1800;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 50%;
-}
+
 
 .form {
   width: 300px;
@@ -69,5 +67,13 @@
 }
 .button {
     margin-right: 10px;
+    background-color: rgba(0, 0, 0, 0.637);
   }
 
+.button_reset {
+  background-color: rgba(0, 0, 0, 0.637);
+}
+
+.span {
+  font-size: 18px;
+}
