manager dashboard done

--- a/client/src/Components/Manager/LoginManager/LoginManager.module.css
+++ b/client/src/Components/Manager/LoginManager/LoginManager.module.css
@@ -5,7 +5,7 @@
       rgba(249, 250, 251, 0.982),
       rgba(7, 229, 249, 0.17)
     ),
-    url('../../../public/img/manager.jpg');
+    url('../../../../public/img/manager.jpg');
   background-size: cover;
   background-position: top;
   position: relative;
