--- a/client/src/Components/Waiter/LayoutWaiter/LayoutWaiter.module.css
+++ b/client/src/Components/Waiter/LayoutWaiter/LayoutWaiter.module.css
@@ -5,6 +5,7 @@
 }
 
 .table_first_row {
+  margin-top: 30px;
   width: 120px;
   height: 120px;
   display: flex;
@@ -12,5 +13,22 @@
   align-items: center;
   border: 1px solid black;
   border-radius: 100%;
+
+}
+.second_row {
+  margin-top: 150px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.table_second_row {
+  width: 150px;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  margin-left: 50px;
+  margin-right: 50px;
 
 }
