--- a/client/src/Components/Waiter/LayoutWaiter/LayoutWaiter.module.css
+++ b/client/src/Components/Waiter/LayoutWaiter/LayoutWaiter.module.css
@@ -11,7 +11,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid black;
+  background-color: rgba(191, 105, 105, 0.529);
+  color: whitesmoke;
+  font-size: 24px;
   border-radius: 100%;
 
 }
@@ -28,7 +30,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid black;
+  background-color: rgba(191, 105, 105, 0.529);
+  /* background-color: rgba(106, 191, 105, 0.529); */
+  color: whitesmoke;
+  font-size: 24px;
   margin-left: 50px;
   margin-right: 50px;
 }
@@ -44,7 +49,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid black;
+  background-color: rgba(191, 105, 105, 0.529);
+  color: whitesmoke;
+  font-size: 24px;
   border-radius: 100%;
-
 }
