clock manager component

--- a/client/src/Components/Manager/MainManager/MainManager.module.css
+++ b/client/src/Components/Manager/MainManager/MainManager.module.css
@@ -45,9 +45,16 @@
 }
 
 .time {
+  font-size: 16px;
+  color: rgb(61, 61, 61);
   margin-right: 25px;
+  letter-spacing: 1px;
 }
 
 .welcome {
   margin-left: 50px;
+  font-size: 18px;
+  color: rgb(61, 61, 61);
+  letter-spacing: 1px;
 }
+
