--- a/client/src/Components/Manager/UsersManager/UsersManager.module.css
+++ b/client/src/Components/Manager/UsersManager/UsersManager.module.css
@@ -14,6 +14,7 @@
   margin-top: 20px;
   background-color: rgba(240, 163, 9, 0.584);
   color: rgb(35, 34, 34);
+  width: 100px;
 }
 
 .button:hover {
