manager users styling updated

--- a/client/src/Components/Manager/UsersManager/UsersManager.module.css
+++ b/client/src/Components/Manager/UsersManager/UsersManager.module.css
@@ -24,3 +24,8 @@
 .content {
   margin: 0 auto;
 }
+
+.menu {
+  background-color: transparent !important;
+  border-inline-end: none !important;
+}
