--- a/client/src/Components/Manager/UsersManager/NewUserForm.module.css
+++ b/client/src/Components/Manager/UsersManager/NewUserForm.module.css
@@ -1,3 +1,17 @@
 .button {
   background-color:rgb(168, 221, 244);
+  width: 100px;
+  align-self: center;
+
+}
+
+.input {
+  width: 250px;
+  margin-bottom: 15px;
+  
+}
+.form {
+  display:flex;
+  flex-direction: column;
+  
 }
