--- a/client/src/Components/Manager/UsersManager/OneUser.module.css
+++ b/client/src/Components/Manager/UsersManager/OneUser.module.css
@@ -3,8 +3,11 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  background-color: rgba(172, 235, 249, 0.607);
+  background-color:rgb(168, 221, 244);
   border-radius: 8px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  /* margin-left: 10px; */
 }
 
 .info {
