--- a/client/src/Components/Manager/UsersManager/OneUser.module.css
+++ b/client/src/Components/Manager/UsersManager/OneUser.module.css
@@ -1,8 +1,9 @@
 .card {
   width: 150px;
-  height: 180px;
+  height: 150px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   text-align: center;
   background-color:rgb(168, 221, 244);
   border-radius: 8px;
@@ -38,4 +39,11 @@
 .icon:hover {
   cursor: pointer;
   color: rgb(255, 98, 0);
+}
+
+.modal {
+  width: 250px !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
