waiter layout updated

--- a/client/src/Components/Waiter/MainWaiter/MainWaiter.module.css
+++ b/client/src/Components/Waiter/MainWaiter/MainWaiter.module.css
@@ -32,7 +32,14 @@
 
 
 .content {
+  /* margin-left: 60px; */
   background-color: transparent !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+   flex-wrap: wrap;
+   width: 1100px;
 }
 
 .footer {
