--- a/client/src/Components/Waiter/LayoutWaiter/OneTable.module.css
+++ b/client/src/Components/Waiter/LayoutWaiter/OneTable.module.css
@@ -1,5 +1,5 @@
 
-.table_first_row {
+.table_first_row_green {
   margin-top: 30px;
   width: 150px;
   height: 120px;
@@ -12,3 +12,18 @@
   margin-right: 30px ;
 
 }
+
+.table_first_row_red {
+  margin-top: 30px;
+  width: 150px;
+  height: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color:  rgba(224, 51, 51, 0.425); 
+  color: whitesmoke;
+  font-size: 24px;
+  margin-right: 30px ;
+
+}
+
