store for editing reservation created

--- a/client/src/Components/Manager/ReservationsManager/OneReservation.module.css
+++ b/client/src/Components/Manager/ReservationsManager/OneReservation.module.css
@@ -43,3 +43,10 @@
 .delete:hover {
   color: brown;
 }
+
+.modal {
+  width: 250px !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
