--- a/client/src/Components/Waiter/MainWaiter/MainWaiter.module.css
+++ b/client/src/Components/Waiter/MainWaiter/MainWaiter.module.css
@@ -32,11 +32,10 @@
 
 
 .content {
-  /* margin-left: 60px; */
   background-color: transparent !important;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   flex-direction: row;
    flex-wrap: wrap;
    width: 1100px;
