filter reservations release 0.5

--- a/client/src/Components/Manager/ReservationsManager/EditReservation.module.css
+++ b/client/src/Components/Manager/ReservationsManager/EditReservation.module.css
@@ -30,6 +30,11 @@
   margin-bottom: 10px;
 }
 
+.phone {
+  margin-bottom: 10px;
+}
+
+
 .button {
   background-color:rgb(168, 221, 244);
   width: 100px;
