--- a/client/src/Components/Manager/ReservationsManager/UpcomingReservations.module.css
+++ b/client/src/Components/Manager/ReservationsManager/UpcomingReservations.module.css
@@ -43,3 +43,17 @@
 .delete:hover {
   color: brown;
 }
+
+.filter_div {
+  margin-bottom: 20px;
+}
+
+.select {
+  background-color: transparent;
+  font-size: 16px;
+  padding: 2px;
+}
+
+.option {
+  text-align: center;
+}
