--- a/client/src/Components/Manager/ReservationsManager/OneReservation.module.css
+++ b/client/src/Components/Manager/ReservationsManager/OneReservation.module.css
@@ -1,23 +1,28 @@
 .data {
   display: flex;
   align-items: center;
+  margin-bottom: 5px;
 }
 
 .date {
+  width: 110px;
+  text-align: start;
   color: black;
   font-size: 20px;
   margin-right: 40px;
 }
 
 .time {
-  align-self: center;
+  width: 60px;
+  text-align: start;
   color: black;
   font-size: 20px;
-  margin-right: 40px;
+  margin-right: 30px;
 }
 
 .name {
-  align-self: center;
+  width: 60px;
+  text-align: start;
   color: black;
   font-size: 20px;
   margin-right: 40px;
@@ -25,9 +30,12 @@
 
 .guests {
   margin-right: 40px;
+  
 }
 
 .phone {
+ width: 120px;
+ text-align: start;
   margin-right: 40px;
 }
 
