--- a/client/src/Components/Waiter/LayoutWaiter/OneTable.module.css
+++ b/client/src/Components/Waiter/LayoutWaiter/OneTable.module.css
@@ -10,10 +10,12 @@
   color: whitesmoke;
   font-size: 24px;
   margin-right: 30px ;
+  cursor: pointer;
 
 }
 
 .table_first_row_red {
+  cursor: pointer;
   margin-top: 30px;
   width: 150px;
   height: 120px;
