--- a/client/src/Components/Waiter/CreateOrder/CreateOrder.module.css
+++ b/client/src/Components/Waiter/CreateOrder/CreateOrder.module.css
@@ -1,14 +1,15 @@
 .menu {
   display:flex;
+  flex-direction: column;
   justify-content: space-between;
-  margin-top: 50px;
+  margin-left: 100px;
 }
 
 .food {
   display: flex;
   border: 1px rgb(194, 193, 193) solid;
-  width: 200px;
-  height: 100px;
+  width: 100px;
+  height: 50px;
   background-color:rgb(168, 221, 244);
   justify-content: center;
   align-items: center;
@@ -18,8 +19,8 @@
 .drinks {
   display: flex;
   border: 1px rgb(194, 193, 193) solid;
-  width: 200px;
-  height: 100px;
+  width: 100px;
+  height: 50px;
   background-color:rgb(168, 221, 244);
   justify-content: center;
   align-items: center;
@@ -27,5 +28,11 @@
 }
 
 .outlet {
-  margin-top: 20px;
+  margin-top: 80px;
+}
+
+.data {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
