--- a/client/src/Components/Waiter/CreateOrder/CreateOrder.module.css
+++ b/client/src/Components/Waiter/CreateOrder/CreateOrder.module.css
@@ -10,10 +10,15 @@
   border: 1px rgb(194, 193, 193) solid;
   width: 100px;
   height: 50px;
-  background-color:rgb(168, 221, 244);
+  background-color:rgba(123, 186, 51, 0.538);
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  color: black;
+}
+
+.food:hover {
+  background-color:rgba(123, 186, 51, 0.946);
 }
 
 .drinks {
@@ -21,10 +26,15 @@
   border: 1px rgb(194, 193, 193) solid;
   width: 100px;
   height: 50px;
-  background-color:rgb(168, 221, 244);
+  background-color:rgba(123, 186, 51, 0.538);
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  color: black;
+}
+
+.drinks:hover {
+  background-color:rgba(123, 186, 51, 0.946);
 }
 
 .outlet {
