--- a/client/src/Components/Waiter/CreateOrder/Menu/Drinks.module.css
+++ b/client/src/Components/Waiter/CreateOrder/Menu/Drinks.module.css
@@ -9,8 +9,12 @@
   border: 1px rgb(194, 193, 193) solid;
   width: 100px;
   height: 50px;
-  background-color:rgb(168, 221, 244);
+  background-color:rgba(123, 186, 51, 0.538);
   justify-content: center;
   align-items: center;
   cursor: pointer;
+}
+
+.category:hover {
+  background-color:rgba(123, 186, 51, 0.946);
 }
