--- a/client/src/Components/Waiter/CreateOrder/CreateOrder.module.css
+++ b/client/src/Components/Waiter/CreateOrder/CreateOrder.module.css
@@ -17,6 +17,18 @@
   color: black;
 }
 
+.foodclicked {
+  display: flex;
+  border: 1px rgb(194, 193, 193) solid;
+  width: 100px;
+  height: 50px;
+  background-color:rgba(123, 186, 51, 0.946);
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  color: black;
+}
+
 .food:hover {
   background-color:rgba(123, 186, 51, 0.946);
 }
@@ -32,6 +44,19 @@
   cursor: pointer;
   color: black;
 }
+
+.drinksclicked {
+  display: flex;
+  border: 1px rgb(194, 193, 193) solid;
+  width: 100px;
+  height: 50px;
+  background-color:rgba(123, 186, 51, 0.946);
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  color: black;
+}
+
 
 .drinks:hover {
   background-color:rgba(123, 186, 51, 0.946);
