--- a/client/src/Components/Waiter/CreateOrder/CreateOrder.module.css
+++ b/client/src/Components/Waiter/CreateOrder/CreateOrder.module.css
@@ -5,7 +5,7 @@
   margin-left: 100px;
 }
 
-.food {
+.section {
   display: flex;
   border: 1px rgb(194, 193, 193) solid;
   width: 100px;
@@ -17,7 +17,7 @@
   color: black;
 }
 
-.foodclicked {
+.sectionClicked {
   display: flex;
   border: 1px rgb(194, 193, 193) solid;
   width: 100px;
@@ -29,36 +29,7 @@
   color: black;
 }
 
-.food:hover {
-  background-color:rgba(123, 186, 51, 0.946);
-}
-
-.drinks {
-  display: flex;
-  border: 1px rgb(194, 193, 193) solid;
-  width: 100px;
-  height: 50px;
-  background-color:rgba(123, 186, 51, 0.538);
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  color: black;
-}
-
-.drinksclicked {
-  display: flex;
-  border: 1px rgb(194, 193, 193) solid;
-  width: 100px;
-  height: 50px;
-  background-color:rgba(123, 186, 51, 0.946);
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  color: black;
-}
-
-
-.drinks:hover {
+.section:hover {
   background-color:rgba(123, 186, 51, 0.946);
 }
 
