--- a/client/src/Components/Waiter/CreateOrder/Menu/MenuCategories.module.css
+++ b/client/src/Components/Waiter/CreateOrder/Menu/MenuCategories.module.css
@@ -1,18 +1,18 @@
-.main {
+.categories {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .category {
   display: flex;
   border: 1px rgb(194, 193, 193) solid;
-  width: 100px;
-  height: 50px;
-  background-color:rgba(123, 186, 51, 0.538);
+  width: 90px;
+  height: 30px;
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  background-color:rgba(123, 186, 51, 0.538);
+  color: black;
 }
 
 .category:hover {
