--- a/client/src/Components/Waiter/CreateOrder/CreateOrder.module.css
+++ b/client/src/Components/Waiter/CreateOrder/CreateOrder.module.css
@@ -52,7 +52,7 @@
 .main_order {
   margin-left: 35px;
   display: flex;
-  width: 250px;
+  width: 320px;
   height: 570px;
   flex-direction: column;
   justify-content: space-between;
@@ -101,8 +101,44 @@
   width: 120px;
 }
 
+.quantity {
+  width: 60px;
+  margin-right: 10px;
+  text-align: center;
+}
+
+.price {
+  width: 40px;
+  margin-right: 10px;
+  text-align: center;
+  
+}
+
+.total {
+  width: 60px;
+  text-align: center;
+  
+}
+
 .item_name {
   width: 120px;
+}
+
+.item_quantity {
+  width: 60px;
+  margin-right: 10px;
+  text-align: center;
+}
+
+.item_price {
+  width: 40px;
+  margin-right: 10px;
+  text-align: center;
+}
+
+.item_total {
+  width: 60px;
+  text-align: center;
 }
 
 
