--- a/client/src/Components/Waiter/ViewOrder/ViewOrder.module.css
+++ b/client/src/Components/Waiter/ViewOrder/ViewOrder.module.css
@@ -1,37 +1,10 @@
 
  .main {
-  width: 580px;
+  width: 530px;
   height: 582px;
   justify-content: space-between;
   display: flex;
  }
-
-
-.section {
-  display: flex;
-  border: 1px rgb(194, 193, 193) solid;
-  width: 100px;
-  height: 50px;
-  background-color:rgba(123, 186, 51, 0.538);
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  color: black;
-}
-
-.sectionClicked {
-  display: flex;
-  border: 1px rgb(194, 193, 193) solid;
-  width: 100px;
-  height: 50px;
-  background-color:rgba(123, 186, 51, 0.946);
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  color: black;
-}
-
-
 
 
 .data {
@@ -41,7 +14,6 @@
 }
 
 .button_edit {
-  /* margin-top: 100px; */
   display: flex;
   justify-content: center;
   justify-items: end;
@@ -52,6 +24,10 @@
 
 .button_edit:hover {
   background-color:rgba(67, 103, 26, 0.946) !important;
+}
+
+.button_bill {
+  margin-right: 30px;
 }
 
 .button_done_div {
