--- a/client/src/Components/Waiter/ViewOrder/ViewOrder.module.css
+++ b/client/src/Components/Waiter/ViewOrder/ViewOrder.module.css
@@ -156,8 +156,92 @@
   margin-right: 30px;
   background-color: rgba(195, 29, 29, 0.874);
 }
+.digits {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  gap: 5px;
+  margin-bottom: 40px;
+  margin-top: 40px;
+}
+
+.digits :first-child {
+  grid-column: 2/3;
+  grid-row: 4/5;
+}
 
 
+.input_manager {
+  margin-bottom: 35px;
+  text-align: center;
+  border: none;
+  letter-spacing: 5px;
+  align-self: center;
+  font-size: 36px;
+  background: none;
+}
+
+.button_manager {
+  width: 40px;
+  height: 40px;
+  border-radius: 0% !important;
+  background-color: rgba(0, 0, 0, 0.637);
+}
+
+.button_manager:hover {
+  background-color: antiquewhite !important;
+  color: rgba(0, 0, 0, 0.637) !important;
+  font-weight: bold;
+}
+
+
+
+.form {
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.form_buttons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  
+}
+.button {
+    margin-right: 10px;
+    background-color: rgba(0, 0, 0, 0.637);
+}
+
+.button:hover {
+  background-color: antiquewhite !important;
+  color: rgba(0, 0, 0, 0.637) !important;
+  font-weight: bold;
+}
+
+.button_reset {
+  background-color: rgba(0, 0, 0, 0.637);
+}
+
+.button_reset:hover {
+  background-color: antiquewhite !important;
+  color: rgba(0, 0, 0, 0.637) !important;
+  font-weight: bold;
+}
+
+.span {
+  font-size: 18px;
+}
+
+
+.incorrect {
+  color: red;
+  font-size: 24px;
+  position: absolute;
+  top: 65%;
+}
 
 
 
