--- a/client/src/Components/Waiter/ViewOrder/ViewOrder.module.css
+++ b/client/src/Components/Waiter/ViewOrder/ViewOrder.module.css
@@ -161,7 +161,7 @@
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(4, 1fr);
   gap: 5px;
-  margin-bottom: 40px;
+  margin-bottom: 10px;
   margin-top: 40px;
 }
 
@@ -172,12 +172,12 @@
 
 
 .input_manager {
-  margin-bottom: 35px;
+  margin-bottom: 5px;
   text-align: center;
   border: none;
   letter-spacing: 5px;
   align-self: center;
-  font-size: 36px;
+  font-size: 16px;
   background: none;
 }
 
@@ -185,7 +185,7 @@
   width: 40px;
   height: 40px;
   border-radius: 0% !important;
-  background-color: rgba(0, 0, 0, 0.637);
+  background-color: rgba(249, 93, 32, 0.637);
 }
 
 .button_manager:hover {
@@ -222,7 +222,8 @@
 }
 
 .button_reset {
-  background-color: rgba(0, 0, 0, 0.637);
+  background-color:  rgba(249, 93, 32, 0.637);
+  margin-bottom: 40px;
 }
 
 .button_reset:hover {
@@ -243,6 +244,10 @@
   top: 65%;
 }
 
+.modal {
+  display: flex;
+  justify-content: center;
+}
 
 
 
