--- a/client/src/Components/Waiter/ViewOrder/ViewOrder.module.css
+++ b/client/src/Components/Waiter/ViewOrder/ViewOrder.module.css
@@ -239,14 +239,19 @@
 
 .incorrect {
   color: red;
-  font-size: 24px;
+  font-size: 16px;
   position: absolute;
-  top: 65%;
+  top: 58%;
 }
 
 .modal {
   display: flex;
   justify-content: center;
+} 
+
+
+.icon_circle {
+  margin-right: 5px;
 }
 
 
