--- a/client/src/Components/Manager/ProductsManager/OneProduct.module.css
+++ b/client/src/Components/Manager/ProductsManager/OneProduct.module.css
@@ -1,13 +1,53 @@
 .card {
-  width: 100px;
-  height: 60px;
+  width: 170px;
+  height: 70px;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  text-align: center;
-  background-color:rgb(168, 221, 244);
+  flex-direction: row;
+  justify-content:  space-between;
+  align-items: center;
+  background-color:rgba(168, 221, 244, 0.671);
   border-radius: 8px;
   margin-right: 10px;
   margin-bottom: 10px;
-  /* margin-left: 10px; */
+}
+
+.info {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
+.name {
+  font-size: 14px;
+  margin-bottom: 8px;
+}
+
+.icons {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  font-size: 18px;
+  color: rgb(57, 55, 55);
+  padding: 15px;
+}
+
+.icon:hover {
+  cursor: pointer;
+  color: rgb(255, 98, 0);
+}
+
+.icon_delete:hover {
+  cursor: pointer;
+  color: rgb(255, 98, 0);
+}
+
+.icon_delete {
+  margin-right: 3px;
+}
+.modal {
+  width: 300px !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
