filter by sections added

--- a/client/src/Components/Manager/ProductsManager/AllProducts.module.css
+++ b/client/src/Components/Manager/ProductsManager/AllProducts.module.css
@@ -17,3 +17,13 @@
 .pagination {
  justify-self: flex-end;
 }
+
+.filters {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.select {
+  margin-left: 5px;
+  margin-right: 20px;
+}
