--- a/client/src/Components/Manager/ProductsManager/NewProduct.module.css
+++ b/client/src/Components/Manager/ProductsManager/NewProduct.module.css
@@ -1,8 +1,8 @@
 .product {
   margin-left: 5px;
   margin-right: 5px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 
 }
 
@@ -17,6 +17,7 @@
 
 .products {
   width: 500px;
+  height: 200px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -48,6 +49,7 @@
 }
 .select {
   margin-left: 10px;
+  width: 100px;
 }
 .choose_section {
   margin-right: 15px;
