--- a/client/src/Components/Manager/ProductsManager/AllProducts.module.css
+++ b/client/src/Components/Manager/ProductsManager/AllProducts.module.css
@@ -1,9 +1,10 @@
 .products {
-  /* height: 300px; */
+  height: 300px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   margin-left: 25px;
+  margin-top: 50px;
   
 }
 
@@ -16,6 +17,7 @@
 
 .pagination {
  justify-self: flex-end;
+ margin-top: 100px;
 }
 
 .filters {
@@ -26,4 +28,6 @@
 .select {
   margin-left: 5px;
   margin-right: 20px;
+  width: 100px;
 }
+
