--- a/client/src/Components/Manager/StatisticsManager/Revenue.module.css
+++ b/client/src/Components/Manager/StatisticsManager/Revenue.module.css
@@ -2,15 +2,43 @@
   margin-left: 10px;
 }
 
+.button_reset {
+  margin-left: 10px;
+}
+
 .main_div {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-
 }
 
 .data {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-top: 40px;
   height: 65vh;
+}
+
+.total_info {
+  display: flex;
+  flex-direction: row;
+  margin-right: 10px;
+}
+
+.key {
+  margin-right: 3px;
+}
+
+.table_revenue {
+  width: 50vw;
+  height: 500px !important;
+  text-align: center;
+}
+
+.data_all {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 15px;
 }
