--- a/client/src/Components/Manager/DashboardManager/DashboardManager.module.css
+++ b/client/src/Components/Manager/DashboardManager/DashboardManager.module.css
@@ -10,22 +10,38 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border: solid rgba(0, 0, 0, 0.185) 1px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   position: relative;
-  
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  transition: all 0.2s ease-in-out;
 }
 
-.total_paid_orders {
-  width: 350px;
-  height: 200px;
-  border: solid black 1px
+.info:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
 }
 
+.total_paid_orders,
 .reservations {
   width: 350px;
   height: 200px;
-  border: solid black 1px
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  transition: all 0.2s ease-in-out;
+}
+
+.total_paid_orders:hover,
+.reservations:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
 }
 
 .data {
@@ -34,10 +50,10 @@
   justify-content: center;
   margin-top: 30px;
   margin-left: 20px;
+  margin-bottom: 20px;
   gap: 10px;
   font-size: 16px;
   color: rgb(59, 58, 58);
-  
 }
 
 .title {
@@ -46,19 +62,29 @@
   color: gray;
   font-weight: bold;
   letter-spacing: 1px;
+  margin-top: 20px;
 }
 
 .icon {
   font-size: 120px;
   font-weight: bold;
   position: absolute;
-  color: rgba(85, 133, 13, 0.191);
-  top: 35%;
-  left: 65%;
+  color: rgba(85, 133, 13, 0.5);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  opacity: 0.2;
+  transition: all 0.2s ease-in-out;
+}
+
+.info:hover .icon {
+  opacity: 0.5;
+  transform: translate(-50%, -50%) scale(1.1);
 }
 
 .digit {
   font-size: 24px;
   font-weight: 600;
-  color: gray
+  color: gray;
 }
