--- a/client/src/Components/Home/Home.module.css
+++ b/client/src/Components/Home/Home.module.css
@@ -1,25 +1,34 @@
+html,
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 .main {
-  height: 98vh;
-  background-image: 
-    url('../../../public/img/home.jpg');
+  height: 100vh;
+  background-image: url("../../../public/img/home.jpg");
   background-size: cover;
-  background-position: top;
+  background-position: center center;
+  background-repeat: no-repeat;
   position: relative;
   display: flex;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
 
 .button_menu {
-  color:black;
+  color: black;
   background-color: transparent !important;
   border-radius: 0%;
   margin-bottom: 20px;
-  
 }
 
 .button_menu:hover {
   color: #001529 !important;
-  background-color:  rgba(197, 90, 32, 0.65) !important ;
-} 
+  background-color: rgba(197, 90, 32, 0.65) !important ;
+}
 
 .menu {
   color: black;
@@ -29,7 +38,6 @@
 .icon {
   font-size: 22px !important;
 }
-
 
 .popout {
   font-family: Futura, sans-serif;
