--- a/client/src/Components/Waiter/LoginWaiter/LoginWaiter.module.css
+++ b/client/src/Components/Waiter/LoginWaiter/LoginWaiter.module.css
@@ -1,11 +1,11 @@
 .waiter {
-  height: 98vh;
+  height: 100vh;
   background-image: linear-gradient(
       to right bottom,
       rgb(242, 247, 237),
       rgba(47, 228, 244, 0.563)
     ),
-    url('../../../../public/img/waiter.jpg');
+    url("../../../../public/img/waiter.jpg");
   background-size: cover;
   background-position: top;
   position: relative;
@@ -22,13 +22,17 @@
   gap: 5px;
   margin-bottom: 50px;
   margin-top: 50px;
+  font-family: "Futura", sans-serif;
+  border: 5px solid #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  padding: 20px;
+  border-radius: 10px;
 }
 
 .digits :first-child {
   grid-column: 2/3;
   grid-row: 4/5;
 }
-
 
 .input_waiter {
   margin-bottom: 35px;
@@ -44,6 +48,10 @@
   width: 70px;
   height: 70px;
   background-color: rgba(0, 0, 0, 0.637);
+  border: 5px solid #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  padding: 20px;
+  border-radius: 10px;
 }
 
 .button_waiter:hover {
@@ -51,8 +59,6 @@
   color: rgba(0, 0, 0, 0.637) !important;
   font-weight: bold;
 }
-
-
 
 .form {
   width: 300px;
@@ -66,11 +72,11 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  
 }
 .button {
-    margin-right: 10px;
-    background-color: rgba(0, 0, 0, 0.637);
+  margin-right: 10px;
+  background-color: rgba(0, 0, 0, 0.637);
+  font-family: "Futura", sans-serif;
 }
 
 .button:hover {
@@ -81,6 +87,7 @@
 
 .button_reset {
   background-color: rgba(0, 0, 0, 0.637);
+  font-family: "Futura", sans-serif;
 }
 
 .button_reset:hover {
@@ -91,6 +98,7 @@
 
 .span {
   font-size: 18px;
+  font-family: "Futura", sans-serif;
 }
 
 .icon_back {
@@ -102,8 +110,20 @@
 }
 
 .incorrect {
-  color: red;
+  font-family: "Futura", sans-serif;
+  color: rgb(242, 77, 77);
   font-size: 24px;
   position: absolute;
-  top: 65%;
+  top: 67%;
+  animation: fade-in 1s ease-in-out;
+  opacity: 0;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
