--- a/client/src/Components/Home/Home.module.css
+++ b/client/src/Components/Home/Home.module.css
@@ -12,7 +12,7 @@ body {
   height: 100vh;
   background-image: url("../../../public/img/home.jpg");
   background-size: cover;
-  background-position: center;
+  background-position: top;
   background-repeat: no-repeat;
   position: relative;
   display: flex;
@@ -64,25 +64,28 @@ body {
   flex-wrap: wrap;
 }
 
-@media (max-width: 1600px) {
+@media only screen and (max-width: 1600px) {
   .popout {
     font-size: 36px;
   }
+  .main {
+    background-position: top;
+  }
 }
 
-@media (max-width: 1500px) {
+@media only screen and (max-width: 1500px) {
   .popout {
     font-size: 32px;
   }
 }
 
-@media (max-width: 1300px) {
+@media only screen and (max-width: 1300px) {
   .popout {
     font-size: 28px;
   }
 }
 
-@media (max-width: 950px) {
+@media only screen and (max-width: 950px) {
   .popout {
     font-size: 24px;
   }
@@ -96,7 +99,7 @@ body {
   }
 }
 
-@media (max-width: 650px) {
+@media only screen and (max-width: 650px) {
   .popout {
     font-size: 16px;
     color: rgba(224, 227, 227, 0.884);
@@ -115,7 +118,7 @@ body {
   }
 }
 
-@media (max-width: 400px) {
+@media only screen and (max-width: 400px) {
   .popout {
     font-size: 14px;
     margin-left: 15px;
