--- a/client/src/Components/Manager/LoginManager/LoginManager.module.css
+++ b/client/src/Components/Manager/LoginManager/LoginManager.module.css
@@ -1,5 +1,5 @@
 .manager {
-  height: 98vh;
+  height: 100vh;
   background-image: linear-gradient(
       to right bottom,
       rgba(249, 250, 251, 0.982),
@@ -19,11 +19,11 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(4, 1fr);
-  gap: 5px;
+  gap: 10px;
   margin-bottom: 50px;
   margin-top: 50px;
   font-family: "Futura", sans-serif;
-  border: 5px solid #fff;
+  border: 3px solid #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   padding: 20px;
   border-radius: 10px;
@@ -49,7 +49,7 @@
   height: 70px;
   border-radius: 0% !important;
   background-color: rgba(0, 0, 0, 0.637);
-  border: 5px solid #fff;
+  border: 3px solid #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   padding: 20px;
   border-radius: 10px;
@@ -88,6 +88,10 @@
 .button_reset {
   background-color: rgba(0, 0, 0, 0.637);
   font-family: "Futura", sans-serif;
+  border: 2px solid #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
 }
 
 .button_reset:hover {
@@ -113,8 +117,10 @@
   font-family: "Futura", sans-serif;
   color: rgb(242, 77, 77);
   font-size: 24px;
-  position: absolute;
-  top: 67%;
+  position: fixed;
+  bottom: 180px;
+  left: 50%;
+  transform: translateX(-50%);
   animation: fade-in 1s ease-in-out;
   opacity: 0;
 }
@@ -125,5 +131,52 @@
   }
   to {
     opacity: 1;
+  }
+}
+@media only screen and (max-width: 1000px) {
+  .digits {
+    gap: 10px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
+
+  .manager {
+    background-position: center;
+  }
+
+  .input_manager {
+    margin-bottom: 5px;
+    font-size: 32px;
+  }
+
+  .incorrect {
+    bottom: 190px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .digits {
+    gap: 8px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
+
+  .input_manager {
+    margin-bottom: 4px;
+    margin-top: 2px;
+    font-size: 30px;
+  }
+
+  .form {
+    width: 250px;
+  }
+
+  .icon_back {
+    font-size: 24px;
+  }
+
+  .incorrect {
+    font-size: 20px;
+    bottom: 200px;
   }
 }
