--- a/client/src/Components/Waiter/MainWaiter/MainWaiter.module.css
+++ b/client/src/Components/Waiter/MainWaiter/MainWaiter.module.css
@@ -119,6 +119,12 @@
     font-size: 20px;
     background: rgb(255, 255, 255);
   }
+
+  .content_collapsed {
+    position: absolute;
+    top: 35%;
+    left: 40%;
+  }
 }
 
 @media only screen and (max-width: 500px) {
@@ -158,7 +164,7 @@
 
   .content_collapsed {
     position: absolute;
-    top: 18%;
+    top: 20%;
     left: 20%;
   }
 }
