--- a/client/src/Components/Waiter/LayoutWaiter/LayoutWaiter.module.css
+++ b/client/src/Components/Waiter/LayoutWaiter/LayoutWaiter.module.css
@@ -1,4 +1,4 @@
-.first_row {
+/* .first_row {
   display: flex;
   justify-content: space-evenly;
   margin-bottom: 60px;
@@ -31,7 +31,6 @@
   justify-content: center;
   align-items: center;
   background-color: rgba(191, 105, 105, 0.529);
-  /* background-color: rgba(106, 191, 105, 0.529); */
   color: whitesmoke;
   font-size: 24px;
   margin-left: 50px;
@@ -53,4 +52,4 @@
   color: whitesmoke;
   font-size: 24px;
   border-radius: 100%;
-}
+} */
