--- a/client/src/Components/Waiter/LayoutWaiter/OneTable.module.css
+++ b/client/src/Components/Waiter/LayoutWaiter/OneTable.module.css
@@ -1,40 +1,5 @@
-/* 
-.table_first_row_green {
-  margin-top: 30px;
-  width: 150px;
-  height: 120px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color:  rgba(106, 191, 105, 0.529); 
-  color: whitesmoke;
-  font-size: 24px;
-  margin-right: 30px ;
-  cursor: pointer;
-
-}
-
+.table_first_row_green,
 .table_first_row_red {
-  cursor: pointer;
-  margin-top: 30px;
-  width: 150px;
-  height: 120px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color:  rgba(224, 51, 51, 0.425); 
-  color: whitesmoke;
-  font-size: 24px;
-  margin-right: 30px ;
-
-}
-
-.icon_dollar {
-  margin-right: 10px;
-}
- */
-
-.table_first_row_green {
   margin-top: 30px;
   width: 150px;
   height: 120px;
@@ -52,21 +17,21 @@
 }
 
 .table_first_row_red {
-  cursor: pointer;
+  /* cursor: pointer;
   margin-top: 30px;
   width: 150px;
   height: 120px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
   background-color: #e06a6a;
-  color: white;
+  /* color: white;
   font-size: 24px;
   margin-right: 30px;
   cursor: pointer;
   border-radius: 10px;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
-  transition: all 0.5s ease;
+  transition: all 0.5s ease; */
 }
 
 .icon_dollar {
@@ -77,4 +42,30 @@
 .table_first_row_red:hover {
   transform: translateY(-5px);
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
+}
+
+@media only screen and (max-width: 1000px) {
+  .table_first_row_green,
+  .table_first_row_red {
+    margin-top: 40px;
+    width: 100px;
+    height: 100px;
+  }
+
+  .icon_dollar {
+    font-size: 20px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .table_first_row_green,
+  .table_first_row_red {
+    margin-top: 40px;
+    width: 90px;
+    height: 90px;
+  }
+
+  .icon_dollar {
+    font-size: 15px;
+  }
 }
