--- a/client/src/Components/Waiter/CreateOrder/Menu/MenuCategories.module.css
+++ b/client/src/Components/Waiter/CreateOrder/Menu/MenuCategories.module.css
@@ -1,24 +1,35 @@
 .categories {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .category {
   display: flex;
   border: 1px rgb(194, 193, 193) solid;
-  width: 90px;
-  height: 30px;
+  width: 100px;
+  height: 45px;
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  background-color:rgba(123, 186, 51, 0.538);
-  color: black;
+  background-color: rgba(123, 186, 51, 0.538);
+  color: white;
+  font-size: 18px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  cursor: pointer;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+  transition: all 0.5s ease;
 }
 
 .category:hover {
-  background-color:rgba(123, 186, 51, 0.946);
+  background-color: rgba(123, 186, 51, 0.946);
+  transform: translateY(-5px);
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
 }
 
 .outlet {
-  margin-top: 80px;
+  margin-top: 40px;
 }
