--- a/client/src/Components/Waiter/CreateOrder/CreateOrder.module.css
+++ b/client/src/Components/Waiter/CreateOrder/CreateOrder.module.css
@@ -77,10 +77,14 @@
 .main_order {
   margin-left: 35px;
   display: flex;
-  width: 320px;
+  width: 350px;
   height: 100%;
   flex-direction: column;
   justify-content: space-between;
+  border: 1px rgba(5, 5, 5, 0.475) solid;
+  padding: 8px;
+  border-radius: 10px;
+  background-color: rgba(250, 235, 215, 0.617);
 }
 
 .total_sum {
@@ -117,6 +121,7 @@
   margin-top: 15px;
   justify-content: space-between;
   position: relative;
+  color: rgba(0, 0, 0, 0.961);
 }
 
 .icons {
