--- a/client/src/Components/Waiter/CreateOrder/Menu/MenuItems.module.css
+++ b/client/src/Components/Waiter/CreateOrder/Menu/MenuItems.module.css
@@ -1,10 +1,12 @@
 .items {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .item {
   display: flex;
+  flex-wrap: wrap;
   border: 1px rgb(194, 193, 193) solid;
   width: 130px;
   height: 60px;
@@ -33,6 +35,18 @@
     width: 100px;
     height: 40px;
     font-size: 12px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .item {
+    display: flex;
+    text-align: center;
+    width: 80px;
+    height: 30px;
+    font-size: 10px;
     margin-right: 5px;
     margin-bottom: 5px;
   }
